# cuda-cmake-template

./: .gitignore  CMakeLists.txt  README.md
include/: add.h  main_cuda.h
src/: CMakeLists.txt  add.cu  main.cpp  main_cuda.cu
